# LaboratorioProgrammazione

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Tingresso.cpp  Tingresso.h  Transazione.cpp  Transazione.h  Tuscita.cpp  Tuscita.h  main.cpp  test_main.cpp
test/: test_main.cpp
